# VecForge

./: .gitignore  Makefile  README.md  go.work  go.work.sum
.github/workflows/: ci.yml  deploy.yml
cmd/vecforge-server/: compress.go  config.go  cors.go  env.go  errors.go  go.mod  health.go  logging.go  main.go  main_test.go  metrics.go  production_test.go  prometheus.go  provider_health.go  ratelimit.go  routes.go  search.go  shutdown.go  tracing.go  version.go  web.go  web_test.go
deploy/fly/: fly.toml
deploy/monitoring/: prometheus.yml
docker/: Dockerfile  Dockerfile.dashboard  Dockerfile.go  docker-compose.yml
docs/: API.md  ARCHITECTURE.md
internal/agent/: cache.go  chain.go  config.go  context.go  embedder.go  feedback.go  filter.go  handlers.go  indexer.go  llm.go  loader.go  memory.go  metrics.go  prompt.go  query_rewrite.go  query_rewrite_test.go  rag.go  ranker.go  reranker.go  retriever.go  splitter.go  storage.go  stream.go  tools.go  validate.go
internal/api/: health.go
internal/api/v1/: health.go  (+1 more)
internal/db/: cache.go  circuit.go  circuit_test.go  config.go  errors.go  factory.go  factory_test.go  health.go  loadbalancer.go  metrics.go  milvus.go  pool.go  pool_test.go  providers.go  qdrant.go  ratelimit.go  retry.go  timeout.go  weaviate.go  wrapper.go
pkg/ffi/: client.go
pkg/models/: search.go
rust-lib/: Cargo.toml  build.rs
rust-lib/benches/: benchmarks.rs
rust-lib/src/: barq.rs  error.rs  ffi.rs  lib.rs  models.rs
web/templates/: dashboard.html  layout.html  loading.html  metrics.html  partials.gohtml  providers.html
(+2 files in other folders)
