[package]
name = "vecforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "vecforge"
crate-type = ["lib", "cdylib"]

[build-dependencies]
cbindgen = "0.26"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
ndarray = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
